...
    )
  }

  @IBAction private func didTapButton(_: Any) {
    let button = UIButton(type: .custom)
    button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 14)
    button.setTitle("Update", for: .normal)
    if let buttonResizeableImage =
      UIImage(named: "TestButtonBackground")?.resizableImage(withCapInsets: UIEdgeInsetsMake(15, 12, 15, 11)) {
      button.setBackgroundImage(buttonResizeableImage, for: .normal)
      button.contentEdgeInsets = UIEdgeInsetsMake(0.0, 5.0, 0.0, 5.0)
    }
    button.setTitleColor(.black, for: .normal)
...
